-bug: Handle STACK graph items properly in RRDtool 1.2.
-bug: Prevent data query recaches if the device returns empty input.
-bug: Fix potential issues with graph gaps when using a large number of poller processes.
-bug: Fix issues when zooming with new RRDtool 1.2 title fonts with a point size other than 10
-bug: Fix issues when zooming outside of the select areas causing a broken graph
-feature: Add ability to filter by host status as well as add ability to filter accross both description and hostname
-feature: Add additional options to control RRDtool 1.2 fonts.
-feature: Allow the user to Enable/Disable Data Sources from the user interface and automatically disable hosts when deleting a device.
-feature: Add Data Source information to the Cacti Log File to assist with troubleshooting.
-feature: Add html links to both hosts and data sources in the Cacti Log File.
-security: Fix several remote inclusion bugs that were exploitable when PHP's 'register_global' feature is turned on [IDEF0941], [IDEF1023], [IDEF1024].
-security: Fix several SQL injection bugs due to improper input validation [IDEF1001].

0.8.6d
-bug#0000416: Speed up binary net-snmp calls by removing MIB lookup requirement.
-bug#0000434/#0000403: Allow for periods in script return variable names.
-bug#0000436: Made snmp.php more like version 0.9 code base.
-bug#0000419: Fixed session initialization problems with some browsers.
-bug#0000394: Fixed a web server crash when reordering items in a graph tree.
-bug#0000390: Remove deep linking in Cacti.
-bug#0000389: Implement directory security in Cacti.
-bug#0000443: Add SNMP port/timeout to the Host MIB CPU/disk script queries.
-bug: Corrected issues encountered when creating multiple graphs from a single graph template.
-bug: Corrected a problem where no graphs are displayed in the graph tree when authentication is turned off.
-bug: Allow RRDTool fetch command to retrieve negative numbers.
-bug: Increased some field lengths for very long OID's.